--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
-    "angular-ui-sortable": "~0.13.1"
+    "angular-ui-sortable": "~0.13.1",
+    "angular-animate": "~1.3.8"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
