--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
     "angular-ui-sortable": "~0.13.1",
-    "angular-animate": "~1.3.8"
+    "angular-animate": "~1.3.8",
+    "angular-ladda": "~0.1.9"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
