--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-socket-io": "~0.6.0",
     "angular-ui-sortable": "~0.13.1",
     "angular-animate": "~1.3.8",
-    "angular-ladda": "~0.1.9"
+    "angular-ladda": "~0.1.9",
+    "angular-sweetalert": "~1.0.3"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
