--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-ui-sortable": "~0.13.1",
     "angular-animate": "~1.3.8",
     "angular-ladda": "~0.1.9",
-    "angular-sweetalert": "~1.0.3"
+    "angular-sweetalert": "~1.0.3",
+    "angular-xeditable": "~0.1.8"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
