--- a/bower.json
+++ b/bower.json
@@ -2,23 +2,25 @@
   "name": "green",
   "version": "0.0.0",
   "dependencies": {
-    "angular": ">=1.2.*",
+    "angular": "*",
     "json3": "~3.3.1",
     "es5-shim": "~3.0.1",
     "jquery": "~1.11.0",
     "bootstrap": "~3.1.1",
-    "angular-resource": ">=1.2.*",
+    "angular-resource": "*",
     "angular-cookies": ">=1.2.*",
-    "angular-sanitize": ">=1.2.*",
-    "angular-route": ">=1.2.*",
-    "angular-bootstrap": "~0.12.0",
+    "angular-sanitize": "*",
+    "angular-route": "*",
+    "angular-bootstrap": "*",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
     "angular-ui-sortable": "~0.13.1",
     "angular-animate": "~1.3.8",
     "angular-ladda": "~0.1.9",
-    "angular-sweetalert": "~1.0.3"
+    "angular-sweetalert": "~1.0.3",
+    "angular-waypoints": "~1.0.1",
+    "waypoints": "~3.1.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
