--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,9 @@
     "angular-ladda": "~0.1.9",
     "angular-sweetalert": "~1.0.3",
     "angular-waypoints": "~1.0.1",
-    "waypoints": "~3.1.1"
+    "waypoints": "~3.1.1",
+    "ui-select": "*",
+    "angular-ui-select": "~0.9.6"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
