--- a/bower.json
+++ b/bower.json
@@ -19,10 +19,9 @@
     "angular-animate": "~1.3.8",
     "angular-ladda": "~0.1.9",
     "angular-sweetalert": "~1.0.3",
-    "angular-waypoints": "~1.0.1",
-    "waypoints": "~3.1.1",
     "ui-select": "*",
-    "angular-ui-select": "~0.9.6"
+    "angular-ui-select": "~0.9.6",
+    "waypoints": "~3.1.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
