--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-sweetalert": "~1.0.3",
     "ui-select": "*",
     "angular-ui-select": "~0.9.6",
-    "waypoints": "~3.1.1"
+    "waypoints": "~3.1.1",
+    "nvd3": "~1.7.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
