Adding toolitps for the options

--- a/bower.json
+++ b/bower.json
@@ -6,12 +6,12 @@
     "json3": "~3.3.1",
     "es5-shim": "~3.0.1",
     "jquery": "~1.11.0",
-    "bootstrap": "~3.1.1",
+    "bootstrap": "~3.3.2",
     "angular-resource": "*",
     "angular-cookies": ">=1.2.*",
     "angular-sanitize": "*",
     "angular-route": "*",
-    "angular-bootstrap": "*",
+    "angular-bootstrap": ">=0.12.1",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
