--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "ui-select": "*",
     "angular-ui-select": "~0.9.6",
     "waypoints": "~3.1.1",
-    "nvd3": "~1.7.1"
+    "nvd3": "~1.7.1",
+    "ngquill": "~1.0.6"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
