--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "angular-ui-select": "~0.9.6",
     "waypoints": "~3.1.1",
     "nvd3": "~1.7.1",
-    "ngquill": "~1.0.6"
+    "ngquill": "~1.0.6",
+    "angular-elastic": "~2.4.2"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
