--- a/bower.json
+++ b/bower.json
@@ -18,13 +18,14 @@
     "angular-ui-sortable": "~0.13.1",
     "angular-animate": "~1.3.8",
     "angular-ladda": "~0.1.9",
-    "angular-sweetalert": "~1.0.3",
+    "angular-sweetalert": "~1.0.4",
     "ui-select": "*",
     "angular-ui-select": "~0.9.6",
     "waypoints": "~3.1.1",
     "nvd3": "~1.7.1",
     "ngquill": "~1.0.6",
-    "angular-elastic": "~2.4.2"
+    "angular-elastic": "~2.4.2",
+    "sweetalert": "~0.5.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
