--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lodash": ">=2.4.1",
     "marked": "^0.3.3",
     "method-override": ">=1.0.0",
-    "mongoose": ">=3.8.8",
+    "mongoose": ">=4.0.0",
     "morgan": ">=1.0.0",
     "nodepdf": ">=1.1.3",
     "passport": ">=0.2.0",
@@ -33,10 +33,9 @@
     "socketio-jwt": ">=2.0.2"
   },
   "devDependencies": {
-    "connect-livereload": ">=0.4.0",
+    "connect-livereload": "^0.5.3",
     "grunt": ">=0.4.4",
     "grunt-angular-templates": ">=0.5.4",
-    "grunt-injector": "~0.5.4",
     "grunt-autoprefixer": ">=0.7.2",
     "grunt-build-control": "DaftMonk/grunt-build-control",
     "grunt-concurrent": ">=0.5.0",
@@ -55,6 +54,7 @@
     "grunt-env": ">=0.4.1",
     "grunt-express-server": ">=0.4.17",
     "grunt-google-cdn": ">=0.4.0",
+    "grunt-injector": "~0.5.4",
     "grunt-karma": ">=0.8.2",
     "grunt-mocha-test": ">=0.10.2",
     "grunt-newer": ">=0.7.0",
