--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "passport": ">=0.2.0",
     "passport-local": ">=0.1.6",
     "passport-twitter": "latest",
-    "passport-uwshib": "0.0.6",
+    "passport-uwshib": "*",
     "serve-favicon": ">=2.0.1",
     "socket.io": ">=1.0.6",
     "socket.io-client": ">=1.0.6",
