--- a/bower.json
+++ b/bower.json
@@ -2,21 +2,21 @@
   "name": "green",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "*",
+    "angular": "1.3.12",
+    "angular-resource": "1.3.12",
+    "angular-cookies": "1.3.12",
+    "angular-sanitize": "1.3.12",
+    "angular-route": "1.3.12",
+    "angular-animate": "1.3.12",
+    "angular-bootstrap": "0.12.1",
     "json3": "~3.3.1",
     "es5-shim": "~3.0.1",
     "jquery": "~1.11.0",
     "bootstrap": "~3.3.2",
-    "angular-resource": "*",
-    "angular-cookies": ">=1.2.*",
-    "angular-sanitize": "*",
-    "angular-route": "*",
-    "angular-bootstrap": ">=0.12.1",
     "font-awesome": ">=4.1.0",
     "lodash": "~3.6.0",
     "angular-socket-io": "~0.6.0",
-    "angular-ui-sortable": "~0.13.1",
-    "angular-animate": "~1.3.8",
+    "angular-ui-sortable": "~0.13.4",
     "angular-ladda": "~0.1.9",
     "angular-sweetalert": "~1.0.4",
     "ui-select": "*",
