--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lodash": ">=2.4.1",
     "marked": "^0.3.3",
     "method-override": ">=1.0.0",
-    "mongoose": ">=4.0.0",
+    "mongoose": "4.0.4",
     "morgan": ">=1.0.0",
     "nodepdf": ">=1.1.3",
     "passport": ">=0.2.0",
