--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "compression": ">=1.0.1",
     "connect-mongo": ">=0.4.1",
     "cookie-parser": ">=1.0.1",
+    "csv": "^0.4.6",
     "ejs": ">=0.8.4",
     "errorhandler": ">=1.0.0",
     "express": "~4.9.0",
@@ -16,11 +17,15 @@
     "express-session": "~1.0.2",
     "grunt-webfont": "^0.5.1",
     "html-pdf": ">=1.0.0",
+    "json2csv": "^3.0.1",
     "jsonwebtoken": ">=0.3.0",
     "lodash": ">=2.4.1",
+    "map-stream": "0.0.6",
     "marked": "^0.3.3",
     "method-override": ">=1.0.0",
     "mongoose": "4.0.4",
+    "mongoose-deep-populate": "^2.0.3",
+    "mongoose-to-csv": "^0.1.0",
     "morgan": ">=1.0.0",
     "nodepdf": ">=1.1.3",
     "passport": "~0.2.2",
