--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "mongoose": "4.0.4",
     "morgan": ">=1.0.0",
     "nodepdf": ">=1.1.3",
-    "passport": ">=0.2.0",
+    "passport": "~0.2.2",
     "passport-local": ">=0.1.6",
     "passport-twitter": "latest",
-    "passport-uwshib": "*",
+    "passport-uwshib": "git@github.com:websiddu/passport-uwshib.git",
     "serve-favicon": ">=2.0.1",
     "socket.io": ">=1.0.6",
     "socket.io-client": ">=1.0.6",
