--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "grunt": ">=0.4.4",
     "grunt-angular-templates": ">=0.5.4",
     "grunt-autoprefixer": ">=0.7.2",
-    "grunt-build-control": "DaftMonk/grunt-build-control",
+    "grunt-build-control": "^0.6.0",
     "grunt-concurrent": ">=0.5.0",
     "grunt-contrib-clean": ">=0.5.0",
     "grunt-contrib-coffee": ">=0.10.1",
