--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "html-pdf": ">=1.0.0",
     "json2csv": "^3.0.1",
     "jsonwebtoken": ">=0.3.0",
-    "lodash": ">=2.4.1",
+    "lodash": "^4.0.0",
     "map-stream": "0.0.6",
     "marked": "^0.3.3",
     "method-override": ">=1.0.0",
